--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,14 @@
+<!doctype html>
 <html>
 <head>
-    <script src="js/app.js"></script>
+    <meta charset="UTF-8"/>
+    <title>Test</title>
+    <script src="lib/phaser/phaser.min.js"></script>
+    <script src="js/game.js"></script>
+    <script src="js/main.js"></script>
 </head>
 <body>
-
+<h1>TypeScript App</h1>
+<div id="content"></div>
 </body>
 </html>
