got the less compiler working

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
 <head>
+    <!-- Meta -->
     <meta charset="UTF-8"/>
-    <title>Test</title>
+    <title>DU Arcade 2016</title>
+    <!-- Javascript -->
     <script src="lib/phaser/phaser.min.js"></script>
     <script src="js/game.js"></script>
     <script src="js/main.js"></script>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-<h1>TypeScript App</h1>
-<div id="content"></div>
+<body class="background">
+<h1 id="title" class="center">TypeScript App</h1>
+<div id="contentContainer" class="centered-div">
+    <div id="content"></div>
+</div>
 </body>
 </html>
