--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="background">
+<a href="https://docs.google.com/document/d/1Gxge2_8-U16DAEXcHfV73xlRAJmqlBCkBnh5tFU4vko/edit#heading=h.n769kv34o38z" target="_blank">Design Doc</a>
+<br>
+<a href="https://github.com/bitDecayGames/DUArcade2016" target="_blank">GitHub</a>
 <h1 id="title" class="center">TypeScript App</h1>
 <div id="contentContainer" class="centered-div">
     <div id="content"></div>
