--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
     <title>DU Arcade 2016</title>
     <!-- Javascript -->
     <script src="lib/phaser/phaser.min.js"></script>
-    <script src="js/game.js"></script>
+    <script src="js/enums/inputType.js"></script>
+    <script src="js/player/player.js"></script>
+    <script src="js/utils/input.js"></script>
+    <script src="js/state/credits.js"></script>
+    <script src="js/state/game.js"></script>
+    <script src="js/state/init.js"></script>
+    <script src="js/state/load.js"></script>
+    <script src="js/state/menu.js"></script>
+    <script src="js/state/newGame.js"></script>
+    <script src="js/state/options.js"></script>
     <script src="js/main.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css">
