--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <!-- Javascript -->
     <script src="lib/phaser/phaser.min.js"></script>
     <script src="js/enums/inputType.js"></script>
-    <script src="js/levels/testRotationLevel.js"></script>
+    <script src="js/levels/level.js"></script>
+    <script src="js/levels/levelData.js"></script>
     <script src="js/player/player.js"></script>
     <script src="js/utils/input.js"></script>
     <script src="js/state/credits.js"></script>
