mostly there, still need level serialization and deserialization for level editor

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="js/levels/create/drawLines.js"></script>
     <script src="js/levels/create/drawRectangle.js"></script>
     <script src="js/levels/create/imageSelect.js"></script>
+    <script src="js/levels/create/paintBrush.js"></script>
     <script src="js/levels/create/stamp.js"></script>
     <script src="js/levels/level.js"></script>
     <script src="js/levels/levelData.js"></script>
