serialize level creations

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8"/>
     <title>DU Arcade 2016</title>
     <!-- Javascript -->
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="lib/phaser/phaser.min.js"></script>
     <script src="js/enums/editorState.js"></script>
     <script src="js/enums/inputType.js"></script>
