--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <!-- Javascript -->
     <script src="lib/phaser/phaser.min.js"></script>
     <script src="js/enums/editorState.js"></script>
+    <script src="js/enums/items.js"></script>
     <script src="js/enums/inputType.js"></script>
     <script src="js/levels/create/drawLines.js"></script>
     <script src="js/levels/create/drawRectangle.js"></script>
