item handling initial work

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="js/enums/editorState.js"></script>
     <script src="js/enums/items.js"></script>
     <script src="js/enums/inputType.js"></script>
+    <script src="js/interaction/interactionHandler.js"></script>
     <script src="js/levels/create/drawLines.js"></script>
     <script src="js/levels/create/drawRectangle.js"></script>
     <script src="js/levels/create/imageSelect.js"></script>
