INteractions are now in place

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <script src="lib/phaser/phaser.min.js"></script>
     <script src="js/enums/editorState.js"></script>
     <script src="js/enums/items.js"></script>
+    <script src="js/enums/itemState.js"></script>
     <script src="js/enums/inputType.js"></script>
     <script src="js/interaction/interactionHandler.js"></script>
     <script src="js/levels/create/drawLines.js"></script>
